--- a/20180208_ssl_free.md
+++ b/20180208_ssl_free.md
@@ -43,6 +43,30 @@ Every certificate authorities have an asymetric key pair and use their private k
 The public key is held inside all browsers. Chrome, Firefox etc were installed with a big list of certificate authorities together with their public key.
 When an SSL connection tries to occur, the certificate is exchanged and the browser will use its CA public key to decrypt the signature and validate the content of the cert.
 
-_Asymetric keys are bidirectional, messages encrypted by the private key can only be decrypted by the public key and messages encrypted by the public key can only be decrypted by the public key._
+Asymetric keys are bidirectional, messages encrypted by the private key can only be decrypted by the public key and messages encrypted by the public key can only be decrypted by the public key.
 
 It isn't possible to forge the signature of the certificate without possessing the private key which is held by the certificate authority therefore it isn't possible to forge a certificate at all which allows to protect against impersonation of the server.
+
+## 2. How to get the certificate
+
+As explained in 1) in order to protect a website we need an SSL certificate and we need to have that certificate from a CA in order for the browser to trust it. On top of that, CA services aren't free.
+
+Here come _Let's Encrypt_. Let's Encrypt allows us to remove the CA component by hosting our own CA. The protocol used is the ACME protocol which was develop for Let's Encrypt service.
+
+It allows complet automation of the CA part which has then allowed website to _get SSL certs trusted for free_.
+
+In order to quickly get a SSL cert, it is possible to use a browser based implementation like https://www.sslforfree.com.
+_SSL for free_ provides a signed certificate trusted. You do have to trust that they are not saving your private key. The site is referenced in Let's Encrypt website in the browser based section.
+
+The goal of the CA being to sign a certificate which specify the domain and the source therefore you will have to prove to SSL for free that you own the domain for which you want to create a certificate for.
+There are 3 ways, one through the domain management, another through FTP and the last one through HTTP.
+
+If like me, you are building on ASP.NET Core, a quick way is to provide the endpoint to serve the verification file. After that from SSL for free, request for a verification. SSL for free will verify that you have added the file they asked and therefore will know that you do have control over the resource under the domain name.
+
+And that's how you get a free SSL cert!
+
+# Conclusion
+
+Over the past few years the world have learnt the difference between insecure and secure web browsing. We have learnt that sending data through HTTP can easily be seen by each parties in between. This can frequently occur as we are more and more connected everyday through public WIFI. We now know that whatever information we send through the wire should be encrypted by sending it through HTTPS.
+Chrome for example will prompt that the connection is unsecure when visiting non HTTPS website where data is exchanged from client to server. Thanks to Let's Encrypt and ACME protocol, everyone can now get a free SSL cert.
+Today we saw how we could use a browser based implementation of the ACME protocol to enable HTTPS on our domain and enable secure browsing for our clients. Hope you like this post, see you next time!
