--- a/20180208_ssl_free.md
+++ b/20180208_ssl_free.md
@@ -33,7 +33,7 @@ In this manner all communications are encrypted. But nothing prevents someone to
 
 Here comes the certifacte authority.
 
-### 2. Authenticity of the certificate provided
+### 1.2 Authenticity of the certificate provided
 
 Certificate authorities are the companies which manage SSL certificates. They are the police of certificates hence their name.
 
