--- a/20180208_ssl_free.md
+++ b/20180208_ssl_free.md
@@ -63,6 +63,8 @@ There are 3 ways, one through the domain management, another through FTP and the
 
 If like me, you are building on ASP.NET Core, a quick way is to provide the endpoint to serve the verification file. After that from SSL for free, request for a verification. SSL for free will verify that you have added the file they asked and therefore will know that you do have control over the resource under the domain name.
 
+If you wish to provide your own certificate to be sign by the SSL for free, you can provide your CSR using the manual option.
+
 And that's how you get a free SSL cert!
 
 # Conclusion
