--- a/20180208_ssl_free.md
+++ b/20180208_ssl_free.md
@@ -58,12 +58,14 @@ It allows complet automation of the CA part which has then allowed website to _g
 In order to quickly get a SSL cert, it is possible to use a browser based implementation like https://www.sslforfree.com.
 _SSL for free_ provides a signed certificate trusted. You do have to trust that they are not saving your private key. The site is referenced in Let's Encrypt website in the browser based section.
 
+If you wish to provide your own certificate to be sign by SSL for free, you can provide your CSR using the manual option. You will need to generate your own cerficate and then upload the CSR to SSL for free, this will allow you to be the only party handling the private key.
+
 The goal of the CA being to sign a certificate which specify the domain and the source therefore you will have to prove to SSL for free that you own the domain for which you want to create a certificate for.
 There are 3 ways, one through the domain management, another through FTP and the last one through HTTP.
 
-If like me, you are building on ASP.NET Core, a quick way is to provide the endpoint to serve the verification file. After that from SSL for free, request for a verification. SSL for free will verify that you have added the file they asked and therefore will know that you do have control over the resource under the domain name.
+![image]()
 
-If you wish to provide your own certificate to be sign by the SSL for free, you can provide your CSR using the manual option.
+If like me, you are building on ASP.NET Core, a quick way is to provide the endpoint to serve the verification file. After that from SSL for free, request for a verification. SSL for free will verify that you have added the file they asked and therefore will know that you do have control over the resource under the domain name.
 
 And that's how you get a free SSL cert!
 
