--- a/20180208_ssl_free.md
+++ b/20180208_ssl_free.md
@@ -63,7 +63,7 @@ If you wish to provide your own certificate to be sign by SSL for free, you can 
 The goal of the CA being to sign a certificate which specify the domain and the source therefore you will have to prove to SSL for free that you own the domain for which you want to create a certificate for.
 There are 3 ways, one through the domain management, another through FTP and the last one through HTTP.
 
-![image]()
+![image](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20180208_ssl/ca_options.png)
 
 If like me, you are building on ASP.NET Core, a quick way is to provide the endpoint to serve the verification file. After that from SSL for free, request for a verification. SSL for free will verify that you have added the file they asked and therefore will know that you do have control over the resource under the domain name.
 
