--- a/20180222_serilog.md
+++ b/20180222_serilog.md
@@ -148,6 +148,7 @@ The simplest way to monitor logs is through files. Saving logs to file allows us
 
 Similarly to Console sink providing writing to console, Rolling Files sink provides a
 
+[complete]
 
 ### 1.3 Environment enricher
 
@@ -161,3 +162,5 @@ Sinks are the pieces in charge of sinking down the log to outputs.
 
 In case of errors within Serilog, it is possible to debug logs from Serilog from ....
 
+
+[complete]
