--- a/20180222_serilog.md
+++ b/20180222_serilog.md
@@ -4,12 +4,12 @@ At each stages of the development cycle, good logs are necessary to debug and fi
 Serilog is a logging framework which allows to log structured logs into different platforms called sinks.
 Today we will see how we can set it up in three parts
 
-```
 1. Serilog for ASP.NET Core
 2. Console sink
 3. Rolling File sink
 4. Environment enricher
-```
+
+All the code discussed here can be found on my GitHub [https://github.com/Kimserey/SerilogTest](https://github.com/Kimserey/SerilogTest).
 
 ## 1. Serilog for ASP.NET Core
 
@@ -25,7 +25,7 @@ _Structure logs cater for that by saving the logs as a structured json object wh
 
 This is an example of structured logs:
 
-```
+```JSON
 {
   "Timestamp": "2018-02-21T09:06:26.8380962+08:00",
   "Level": "Information",
@@ -51,7 +51,7 @@ This is an example of structured logs:
 
 To start using Serilog on ASP.NET Core, we can start by downloading [`Serilog.AspNetCore`](https://www.nuget.org/packages/Serilog.AspNetCore) and register Serilog on the WebHostBuilder in `program.cs`.
 
-```
+```C#
 WebHost.CreateDefaultBuilder(args)
     .UseStartup<Startup>()
     .UseSerilog()
@@ -60,7 +60,7 @@ WebHost.CreateDefaultBuilder(args)
 
 We can already configure directly the logger from the code.
 
-```
+```C#
  WebHost.CreateDefaultBuilder(args)
     .UseStartup<Startup>()
     .UseSerilog((ctx, cfg) =>
@@ -75,7 +75,7 @@ We can already configure directly the logger from the code.
 But if we want to use the Configuration framework to configure Serilog, we can download [`Serilog.Settings.Configuration`](https://www.nuget.org/packages/Serilog.Settings.Configuration) and configure Serilog to read from configuration.
 One of the advantage of using the Configuration framework is the ability to configure the logger from `appsettings.json` and leverage the multi environment support from `appsettings.json` with `appsettings.Development.json` or `appsettings.Production.json`. After installing `Serilog.Settings.Configuration`, we can use it with `.ReadFrom()`.
 
-```
+```C#
 WebHost.CreateDefaultBuilder(args)
     .UseStartup<Startup>()
     .UseSerilog((ctx, cfg) => cfg.ReadFrom.Configuration(ctx.Configuration))
@@ -84,7 +84,7 @@ WebHost.CreateDefaultBuilder(args)
 
 In case of errors within Serilog, it is possible to debug logs from Serilog using `SelfLog`.
 
-```
+```C#
 Serilog.Debugging.SelfLog.Enable(msg => Debug.WriteLine(msg));
 ```
 
@@ -94,7 +94,7 @@ From the example we saw that we can configure a default minimum level of logging
 
 Serilog alone does not write logs anywhere. It only construct the structured logs. To write to an ouput, we need to configure a __sink__. The most common one is [`Serilog.Sinks.Console`](https://www.nuget.org/packages/Serilog.Sinks.Console). Once we installed it, we can write to console by simply adding `WriteTo.Console()`.
 
-```
+```C#
  WebHost.CreateDefaultBuilder(args)
     .UseStartup<Startup>()
     .UseSerilog((ctx, cfg) =>
@@ -109,7 +109,7 @@ Serilog alone does not write logs anywhere. It only construct the structured log
 
 Or configure it from appsettings.
 
-```
+```JSON
 {
   "Serilog": {
     "MinimumLevel": {
@@ -127,7 +127,7 @@ Or configure it from appsettings.
 
 Other properties are available on each logs. For example the `SourceContext` is the namespace where the log originated. If we want to display it on each log we only need to change the default template of the Console.
 
-```
+```C#
 cfg.ReadFrom.Configuration(ctx.Configuration)
     .MinimumLevel.Debug()
     .MinimumLevel.Override("Microsoft", LogEventLevel.Information)
@@ -136,31 +136,49 @@ cfg.ReadFrom.Configuration(ctx.Configuration)
 
 From then on the logs should contain the source context.
 
-```
+```TXT
 [2018-02-21 09:06:26.837 +08:00 Web INF] Microsoft.AspNetCore.Mvc.StatusCodeResult: Executing HttpStatusCodeResult, setting HTTP status code 200
 ```
 
 ## 3. Rolling Files sink
 
-By writing to Console we can see live logs appearing but when we close the application, all the logs are gone as non of them are persisted. This is incredibly useful while developing as most of the time we don't want to know what happened in a past execution.
-But in production, it is necessary to persist logs as the application will run without us monitoring it with all our attention.
-The simplest way to monitor logs is through files. Saving logs to file allows us to reference back previous executions by looking into the file.
+By writing to Console we can see live logs appearing but when we close the application, all the logs are gone as none of them are persisted. Writing to console is useful while developing as most of the time we only care about what is going on during the execution and we don't care about past executions.
+But in production, it is necessary to persist logs as the application will run without us monitoring it with all our attention. On top of that there are time where the application we can't have access to a console output in a remote system.
 
-Similarly to Console sink providing writing to console, Rolling Files sink provides a
+In those instances, the simplest way to monitor logs is through files. Saving logs to files allows us to reference back previous executions by looking into the file or even to monitor the file remotely.
 
-[complete]
+Similarly to Console sink providing writing to console, Rolling Files sink comes from a package [`Serilog.Sink.RollingFile`](https://www.nuget.org/packages/serilog.sinks.rollingfile/). After installation we can configure in the same way we configured the Console log, except that we will need to provide a file path for the logs to be saved.
 
-### 1.3 Environment enricher
+```C#
+cfg.ReadFrom.Configuration(ctx.Configuration)
+    .MinimumLevel.Debug()
+    .MinimumLevel.Override("Microsoft", LogEventLevel.Information)
+    .WriteTo.RollingFile("Logs\\Web-{Date}.log", outputTemplate: "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {SourceContext}: {Message:lj}{NewLine}{Exception}")
+```
 
-We configured the Console sink and as we see,  it write messages on the console with predefined data like timestamp, log level of the messages and of course the message content and exception if any.
+After we configured the environment we can see the log files appearing under the folder configured.
 
+## 4. Environment enricher
 
+With the sinks configured, we can see the messages outputed with predefined data like timestamp, log level of the messages and of course the message content and exception if any.
+Apart from those information, our logs might be holding more data which aren't part of the template therefore not displayed which we have seen how to display by changing the template.
 
-Enrich will add extra properties to the log in order to provide more information.
+One of the enricher is the environment enricher which provides information about the machine name and the environment user name, the user running the application.
 
-Sinks are the pieces in charge of sinking down the log to outputs.
+Similarly as the sinks, enricher are added using packages. For the environment enricher, we add the [`Serilog.Enrich.Environment`](https://www.nuget.org/packages/serilog.enrichers.environment/). Once installed, we can then enrich our logs.
 
-In case of errors within Serilog, it is possible to debug logs from Serilog from ....
+```C#
+cfg.ReadFrom.Configuration(ctx.Configuration)
+    .MinimumLevel.Debug()
+    .MinimumLevel.Override("Microsoft", LogEventLevel.Information)
+    .Enrich.WithMachineName()
+    .Enrich.WithEnvironmentUserName()
+    .WriteTo.Console(theme: AnsiConsoleTheme.Code, outputTemplate: "{MachineName} {EnvironmentUserName}: {Message:lj}{NewLine}{Exception}")
+```
 
+Now if we look at the log, we should be able to see the new information in the logs.
+And that conclude our simple way to write logs to console and persist them in log files using Serilog!
 
-[complete]
+## Conclusion
+
+Logs are the best tools that developers have to write programs. Having a powerful logging system is important but the simplicity of it also need to be taken into consideration. Serilog provides an easy way to configure simple Console and Rolling file logs and at the same time cater for expansion of the code towards more heavy duty tools like the Elastic stack. Hope you liked this post. See you next time!
