--- a/20180222_serilog.md
+++ b/20180222_serilog.md
@@ -1,7 +1,7 @@
 # Logging in ASP NET Core with Serilog
 
-At each stages of the development cycle, good logs are necessary to debug and fix bugs efficiently.
-Serilog is a logging framework which allows to log structured logs into different platforms called sinks.
+At each stages of an application development cycle, good logs are necessary to debug and fix bugs efficiently.
+Serilog is a logging framework allowing developers to log structured logs into different ouput platforms.
 Today we will see how we can set it up in three parts
 
 1. Serilog for ASP.NET Core
@@ -13,15 +13,14 @@ All the code discussed here can be found on my GitHub [https://github.com/Kimser
 
 ## 1. Serilog for ASP.NET Core
 
-Serilog is a logging framework providing facilities to write structured logs into different platforms called sinks.
-
 ### 1.1 Structured logs
 
-Logs are string messages describing an event in the system. To build log messages, we assemble pieces of information like elapsed time or process name and arrange it into a string which we then write to an ouput stream, console or file for example.
-The end data available is the timestamp of the log and the log message. Using this log message, all we can do to query is a full text search query.
-If our log contained an elasped time counter, it would not be easy to run a query against it.
+Logs are string messages describing an event in the system. They are built by assembling pieces of information, elapsed time or process name, into a string message. Once constructed into a message, they are written into an ouput stream, console or file for example.
+The message contains the timestamp the log message. The log message being a string, all we can do to query it is a full text search query.
+If our log contained the elapsed time, it would not be easy to run a `under/above X ms` query against it.
 
-_Structure logs cater for that by saving the logs as a structured json object where all pieces are kept_. The advantage is that it provides full flexibility by allowing to query on the properties where items are typed. The other advantage is that it provides a unified way to allow multiple platform to write to their own output the logs in their own way since they get all raw propeties.
+__Structure logs cater for that by saving the logs as a structured json object where all pieces of information are kept in their original form__. The advantage being that it provides full flexibility by allowing to query on the properties of each logs.
+The other advantage is that it provides a unified way to allow platforms to display logs in their own way by giving them access to the raw propeties.
 
 This is an example of structured logs:
 
@@ -49,7 +48,7 @@ This is an example of structured logs:
 
 ### 1.2 ASP.NET Core
 
-To start using Serilog on ASP.NET Core, we can start by downloading [`Serilog.AspNetCore`](https://www.nuget.org/packages/Serilog.AspNetCore) and register Serilog on the WebHostBuilder in `program.cs`.
+To start using Serilog on ASP.NET Core, we start by downloading [`Serilog.AspNetCore`](https://www.nuget.org/packages/Serilog.AspNetCore) and register Serilog on the `WebHostBuilder` in `program.cs`.
 
 ```C#
 WebHost.CreateDefaultBuilder(args)
@@ -72,8 +71,9 @@ We can already configure directly the logger from the code.
     .Build();
 ```
 
-But if we want to use the Configuration framework to configure Serilog, we can download [`Serilog.Settings.Configuration`](https://www.nuget.org/packages/Serilog.Settings.Configuration) and configure Serilog to read from configuration.
-One of the advantage of using the Configuration framework is the ability to configure the logger from `appsettings.json` and leverage the multi environment support from `appsettings.json` with `appsettings.Development.json` or `appsettings.Production.json`. After installing `Serilog.Settings.Configuration`, we can use it with `.ReadFrom()`.
+Here we configured via code but we can also take advantage of the Configuration framework by downloading [`Serilog.Settings.Configuration`](https://www.nuget.org/packages/Serilog.Settings.Configuration) and configure Serilog to read from configuration.
+
+One of the advantage of using the Configuration framework is the ability to configure the logger from `appsettings.json` and leverage the multi environments support from `appsettings.json` with `appsettings.Development.json`/`appsettings.Production.json`. After installing `Serilog.Settings.Configuration`, we can use it with `.ReadFrom()`.
 
 ```C#
 WebHost.CreateDefaultBuilder(args)
@@ -81,6 +81,8 @@ WebHost.CreateDefaultBuilder(args)
     .UseSerilog((ctx, cfg) => cfg.ReadFrom.Configuration(ctx.Configuration))
     .Build();
 ```
+
+We will see later an example of the json configuration for Serilog.
 
 In case of errors within Serilog, it is possible to debug logs from Serilog using `SelfLog`.
 
@@ -92,7 +94,7 @@ From the example we saw that we can configure a default minimum level of logging
 
 ## 2 Console sink
 
-Serilog alone does not write logs anywhere. It only construct the structured logs. To write to an ouput, we need to configure a __sink__. The most common one is [`Serilog.Sinks.Console`](https://www.nuget.org/packages/Serilog.Sinks.Console). Once we installed it, we can write to console by simply adding `WriteTo.Console()`.
+Serilog alone does not write logs anywhere. It only constructs the structured logs. To write to an ouput, we need to configure a __sink__. The console sink is the most straight forward, [`Serilog.Sinks.Console`](https://www.nuget.org/packages/Serilog.Sinks.Console). Once we installed it, we can write to console by simply adding `WriteTo.Console()`.
 
 ```C#
  WebHost.CreateDefaultBuilder(args)
@@ -142,10 +144,11 @@ From then on the logs should contain the source context.
 
 ## 3. Rolling Files sink
 
-By writing to Console we can see live logs appearing but when we close the application, all the logs are gone as none of them are persisted. Writing to console is useful while developing as most of the time we only care about what is going on during the execution and we don't care about past executions.
-But in production, it is necessary to persist logs as the application will run without us monitoring it with all our attention. On top of that there are time where the application we can't have access to a console output in a remote system.
+Writing to console is useful while developing as most of the time we only care about what is going on during the execution and we don't care about past executions. Logs appear live on the console thenwhen we close the application, all the logs are gone as none of them are persisted.
 
-In those instances, the simplest way to monitor logs is through files. Saving logs to files allows us to reference back previous executions by looking into the file or even to monitor the file remotely.
+But in production, it is necessary to persist logs as the application will run without us monitoring it with all our attention. On top of that there are times where we can't have access to a console in a remote system.
+
+In those instances, the simplest way to monitor logs is through files. Saving logs to files allows us to reference back previous executions.
 
 Similarly to Console sink providing writing to console, Rolling Files sink comes from a package [`Serilog.Sink.RollingFile`](https://www.nuget.org/packages/serilog.sinks.rollingfile/). After installation we can configure in the same way we configured the Console log, except that we will need to provide a file path for the logs to be saved.
 
@@ -161,11 +164,11 @@ After we configured the environment we can see the log files appearing under the
 ## 4. Environment enricher
 
 With the sinks configured, we can see the messages outputed with predefined data like timestamp, log level of the messages and of course the message content and exception if any.
-Apart from those information, our logs might be holding more data which aren't part of the template therefore not displayed which we have seen how to display by changing the template.
+Apart from those information, our logs might be holding more data as we saw in 1). Those data are added by default, if those aren't enough, we can also add more by using __enrichers__.
 
-One of the enricher is the environment enricher which provides information about the machine name and the environment user name, the user running the application.
+One of the enricher is the environment enricher which provides information about the machine name and the environment user name running the application.
 
-Similarly as the sinks, enricher are added using packages. For the environment enricher, we add the [`Serilog.Enrich.Environment`](https://www.nuget.org/packages/serilog.enrichers.environment/). Once installed, we can then enrich our logs.
+Similarly as the sinks, enrichers are added using packages. For the environment enricher, we add the [`Serilog.Enrich.Environment`](https://www.nuget.org/packages/serilog.enrichers.environment/). Once installed, we can then enrich our logs.
 
 ```C#
 cfg.ReadFrom.Configuration(ctx.Configuration)
@@ -177,6 +180,11 @@ cfg.ReadFrom.Configuration(ctx.Configuration)
 ```
 
 Now if we look at the log, we should be able to see the new information in the logs.
+
+```TXT
+ DESKTOP-XXX DESKTOP-XXX\Kim Serey: Executed action \"WebApplication.Controllers.ValuesController.Errors (WebApplication)\" in 1.6461ms
+```
+
 And that conclude our simple way to write logs to console and persist them in log files using Serilog!
 
 ## Conclusion
