--- a/20180309_remote_ps.md
+++ b/20180309_remote_ps.md
@@ -11,7 +11,7 @@ The Remote Desktop Protocol is great to access remotely a Windows Server machine
 
 For Azure or AWS, on the security group, the port 5986 needs to be open. It is the port used by WinRM for a PowerShell remote connection over HTTPS.
 
-![open_port]()
+![open_port](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20180309_pssession/1_openport.PNG)
 
 Next RDP to your VM and open the same port from the firewall manually or by using the following PS command `New-NetFirewallRule`.
 
@@ -33,7 +33,7 @@ Here we are creating a self signed certificate for the server itself and placing
 
 Then go to the certificate manager console and export the certificate.
 
-![export]()
+![export](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20180309_pssession/2_local_cert.PNG)
 
 Since we have selected `LocalMachine\My` the certificate will be under `Local Computer\Personal\Certificates`. Once you have located your certificate, right click > Export > Select do not export private key > Select DER encoded binary X.509 (.CER) > Save somewhere. The wizard will export the certificate into a .cer file which you can copy to your local computer. Once done double click on the certificate to install it. You can place it inside trusted root to avoid the warning prompt when trying to connect to remote to the VM.
 
@@ -41,7 +41,7 @@ Since we have selected `LocalMachine\My` the certificate will be under `Local Co
 
 Start by checking that your Windows Server machine has WinRM service running.
 
-![winRM]()
+![winRM](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20180309_pssession/3_winrm.PNG)
 
 Next register a listener for the remote connection by executing the following in PowerShell.
 
