--- a/20180309_remote_ps.md
+++ b/20180309_remote_ps.md
@@ -60,12 +60,17 @@ Execute the following command from your local computer to make a remote connecti
 Enter-PSSession -ComputerName (your server here).ap-southeast-1.compute.amazonaws.com -Credential Administrator -UseSSL
 ```
 
-Instead of entering the session it is also possible to instantiated the session and use it to copy files for example. This can be done using the following commands:
+Instead of entering the session it is also possible to instantiated the session and use it to copy files for example. Start by saving the session into a variable.
 
 ```PowerShell
 <# Copy file from local to host #>
-> $pssession = New-PSSession -ComputerName ec2-54-169-70-45.ap-southeast-1.compute.amazonaws.com -Credential Administrator -UseSSL
-> Copy-Item 'C:\Users\Kim Serey\Desktop\abc.PNG' -Destination C:\Users\Administrator\Desktop\ -ToSession $pssession
+$pssession = New-PSSession -ComputerName ec2-54-169-70-45.ap-southeast-1.compute.amazonaws.com -Credential Administrator -UseSSL
+```
+
+Then copy with the following.
+
+```PowerShell
+Copy-Item 'C:\Users\Kim Serey\Desktop\abc.PNG' -Destination C:\Users\Administrator\Desktop\ -ToSession $pssession
 ```
 
 That concludes how we can remotely manage a Windows Server VM.
