--- a/20180408_vault_iis.md
+++ b/20180408_vault_iis.md
@@ -69,3 +69,25 @@ After we have installed the modules, we can create `web.config` under the Vault 
 </configuration>
 ```
 
+This will configure the URL rewrite to forward anything after the `/vault` prefix to the process hosted on `*:8300`.
+
+By default IIS does not allow proxying to a different domain so when the request comes from `myapp.com/vault/[...]`, it isn't possible to reroute it to `localhost:8200/[...]`.
+
+To enable that, we will make use of ARR which we already downloaded and installed. To activate it, we need to go to main server configuration and click on Application Request Routing under IIS.
+
+![ARR]()
+
+Then go to __Proxy > Server Proxy Settings__ and enable __Pass Through__ proxying.
+
+![pass_through]()
+
+Now that we have it setup, we should be able to hit Vault API from the path:
+
+```ps1
+PS> Invoke-WebRequest -Uri "http://localhost/vault/v1/secret/myapp" -Headers @{"x-vault-token"="[your token]"}
+
+
+StatusCode        : 200
+StatusDescription : OK
+Content           : {"request_id":"b1d99860-b330-5a15-203a-06352154291e", "lease_id":"","renewable":false,"lease_duration":2764800,"data":{"databaseConnection":"123abc"},"wrap_info":null,"warnings":null,"auth":null}
+```
