--- a/20180408_vault_iis.md
+++ b/20180408_vault_iis.md
@@ -75,11 +75,11 @@ By default IIS does not allow proxying to a different domain so when the request
 
 To enable that, we will make use of ARR which we already downloaded and installed. To activate it, we need to go to main server configuration and click on Application Request Routing under IIS.
 
-![ARR]()
+![ARR](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20180408_vault_iis/1_arr.PNG)
 
 Then go to __Proxy > Server Proxy Settings__ and enable __Pass Through__ proxying.
 
-![pass_through]()
+![pass_through](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20180408_vault_iis/2_passthrough.PNG)
 
 Now that we have it setup, we should be able to hit Vault API from the path:
 
@@ -91,3 +91,8 @@ StatusCode        : 200
 StatusDescription : OK
 Content           : {"request_id":"b1d99860-b330-5a15-203a-06352154291e", "lease_id":"","renewable":false,"lease_duration":2764800,"data":{"databaseConnection":"123abc"},"wrap_info":null,"warnings":null,"auth":null}
 ```
+
+We have completed the configuration of IIS and now have all calls routed to our application for those on `*:80` and for those with a prefix of `*:80/vault` routed to Vault which is listening on `http://localhost:8200`.
+
+## 2. Read secrets from Vault from ASP.NET Core
+
