--- a/20180408_vault_iis.md
+++ b/20180408_vault_iis.md
@@ -15,7 +15,7 @@ To begin with, we can follow the same steps described in my previous post - [Has
 
 - download Vault
 - create the config.hcl file
-- run the command `Vault server -c=config.hcl`
+- run the command `vault.exe server -config=config.hcl`
 
 In config.hcl, we configured Vault to listen on http://localhost:8200 so the next thing to do is to proxy calls from IIS to Vault process.
 
@@ -37,6 +37,11 @@ PS> Invoke-WebRequest -Uri "http://localhost/secrets"
 StatusCode        : 200
 StatusDescription : OK
 Content           : {"databaseConnection":null}
+```
+
+This is the code of the `controller`:
+
+```c#
 ```
 
 #### 1.2.2 Setup Vault as sub application
@@ -69,7 +74,7 @@ After we have installed the modules, we can create `web.config` under the Vault 
 </configuration>
 ```
 
-This will configure the URL rewrite to forward anything after the `/vault` prefix to the process hosted on `*:8300`.
+This will configure the URL rewrite to forward anything after the `/vault` prefix to the process hosted on `*:8200`.
 
 By default IIS does not allow proxying to a different domain so when the request comes from `myapp.com/vault/[...]`, it isn't possible to reroute it to `localhost:8200/[...]`.
 
@@ -96,3 +101,106 @@ We have completed the configuration of IIS and now have all calls routed to our 
 
 ## 2. Read secrets from Vault from ASP.NET Core
 
+In order to consume Vault secrets from ASP.NET Core, we will use [VaultSharp](https://www.nuget.org/packages/VaultSharp).
+
+Again assuming that we have configured an AppRole authentication which gives an identity to our application and allows it to authenticate to Vault using clientId and secretId. _This was explain in my previous post on [how to get started with Vault](https://kimsereyblog.blogspot.sg/2018/03/manage-secrets-with-hashicorp-vault.html)_.
+
+To use AppRole, we can directly call the `VaultClientFactory` passing the address and the `AppRoleAuthenticationInfo`.
+
+```c#
+IVaultClient vaultClient = VaultClientFactory.CreateVaultClient(
+    new Uri("http://localhost:8200"),
+    new AppRoleAuthenticationInfo("myroleid", "mysecretid")
+);
+```
+
+Then using the `IVaultClient`, we query our secrets.
+
+```c#
+var vaultSecrets = vaultClient.ReadSecretAsync("secret/myapp").Result.Data;
+```
+
+Using this process of retrieval, we construct an extension to the configuration builder which adds a memory collection containing the secrets from Vault.
+
+```c#
+public static IConfigurationBuilder AddVault(this IConfigurationBuilder builder)
+{
+    var buildConfig = builder.Build();
+
+    if (buildConfig.GetSection("settings:useVault").Get<bool>())
+    {
+        try
+        {
+            IVaultClient vaultClient = VaultClientFactory.CreateVaultClient(
+                new Uri("http://localhost:8200"),
+                new AppRoleAuthenticationInfo(
+                    buildConfig["vault:roleid"],
+                    buildConfig["vault:secretid"]
+                )
+            );
+
+            var vaultSecrets = vaultClient
+                    .ReadSecretAsync("secret/myapp")
+                    .Result
+                    .Data
+                    .Select(x => new KeyValuePair<string, string>($"vault:{x.Key}", x.Value.ToString()));
+
+            return builder.AddInMemoryCollection(vaultSecrets);
+        }
+        catch (Exception ex)
+        {
+            throw new Exception("Vault configuration failed: " + ex.Message);
+        }
+    }
+    else
+    {
+        return builder;
+    }
+}
+```
+
+We then call it from `Program.cs`.
+
+```c#
+public static IWebHost BuildWebHost(string[] args) =>
+    WebHost.CreateDefaultBuilder(args)
+        .UseStartup<Startup>()
+        .ConfigureAppConfiguration(builder => builder.AddVault())
+        .Build();
+```
+
+Now that the application is setup to read from Vault, we need to get the `roleid` and `secretid` from Vault.
+
+_Assuming that you have setup Vault AppRole and have created a policy to access secret/myapp attached to a role as explained in [my previous post](https://kimsereyblog.blogspot.sg/2018/03/manage-secrets-with-hashicorp-vault.html)._
+
+The `roleid` never changes as it is generated when the role is created. Therefore we retrieve it `vault read auth/approle/role/myapp/role-id` then add it as environment variable for it to be available globally on the machine.
+
+Next we can retrieve the `secretid` using `vault write -f auth/approle/role/myapp/secret-id` and set it directly either in IIS configuration environment variable or in `web.config` in the webserver. __Do not add/commit the secret in the code.__
+
+In the web.config, it can be added like so:
+
+```xml
+<aspNetCore processPath="dotnet" arguments=".\VaultTest.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout">
+    <environmentVariables>
+        <environmentVariable name="vault:secretid" value="..." />
+    </environmentVariables>
+</aspNetCore>
+```
+
+Now that we have added the role id and the secret id, we can execute the webrequest.
+
+```ps1
+PS> Invoke-WebRequest -Uri "http://localhost/secrets"
+
+
+StatusCode        : 200
+StatusDescription : OK
+Content           : {"databaseConnection":"123abc"}
+```
+
+We can see that our application was now able to boot and access the secrets from Vault. Our secrets can now be saved safely in Vault, the role id can be distributed on the VM as an environment variable while the secret can be distributed during the deployment of the application by adding it to the web.config as local environment variable to the application.
+Vault encrypts all secrets and they are never accessible in a persisted state as plain text. Only the secret can be seen as plain text but it is tied with a TTL which reduces the risks. Lastly in this manner all secrets only transit between Vault and the application who owns them, reducing the risk of eavesdropping.
+
+## Conclusion
+
+Today we saw how we could use Vault with AppRole and store our secrets to be used by an ASP.NET Core application. While doing that we also seen how we could host Vault and our application on Windows Server and how we could configure IIS to route all traffic coming into the server. Finally we explored how to consume secrets and inject it into the configuration framework of ASP.NET Core to be used by our application. Hope you liked this post! See you next time!
