--- a/20180511_libman.md
+++ b/20180511_libman.md
@@ -1,5 +1,92 @@
 # Handle client side libraries for ASP NET Core with Library Manager
 
+Few weeks ago I discussed how we could create a healthchek library which would return json status of our application. Using the json, I wanted to make a quick page to display healthchecks in a nice visual. I wanted to quickly add `Bootstrap` and `momentJS`. For frontend libraries, I was used to use Bower as it nicely put every frontend package in `/bower_components` which can be served as static data. But since Bower was announcing that it was no longer supported and requested to use Yarn or NPM, I started to look around for an easier solution than those as I don't really care about source code of the frontend libraries, all I want is the latest compiled versions. After few minutes of research, I found out that the team in Microsoft felt the same way as I did and already worked on a tool called `Library manager` (libman) and is available in `VS Preview` for the moment. Libman gives the benefit to allow developers to download locally the latest compiled version of the `CSS` or `JS` of their preferred frameworks for frontend usage. We can see Libman as a CDN file management for local usage. Today I will show how it can be used and combined with Razor pages to bring quickly pages to life. This post will be composed of three parts:
+
 1. Enable Library Manager
 2. Configure Bootstrap
 3. Create a simple site with Razor pages
+
+## 1. Enable Library Manager
+
+__Before starting, make sure that you are on Visual Studio 2017 Preview 15.7.0.__
+
+First thing to do is to right click on the project and select `Manage Client-Side Libraries`.
+After that we have enabled it, we will have a `libman.json` file. Right click on the `libman.json` file then select `Restore on build`. This will have as effect to download locally the libraries to the destination specified in the `libman.json`.
+
+## 2. Configure Bootstrap
+
+```json
+{
+  "defaultProvider": "cdnjs",
+  "libraries": [
+    {
+      "library": "jquery@3.3.1",
+      "destination": "wwwroot/lib/jquery",
+      "files": [
+        "jquery.slim.js",
+        "jquery.slim.min.js",
+        "jquery.slim.min.map"
+      ]
+    },
+    {
+      "library": "popper.js@1.14.3",
+      "destination": "wwwroot/lib/popper.js",
+      "files": [
+        "umd/popper.js",
+        "umd/popper.min.js",
+        "umd/popper.min.js.map"
+      ]
+    },
+    {
+      "library": "twitter-bootstrap@4.1.0",
+      "destination": "wwwroot/lib/bootstrap",
+      "files": [
+        "css/bootstrap.css",
+        "css/bootstrap.css.map",
+        "css/bootstrap.min.css",
+        "css/bootstrap.min.css.map",
+        "js/bootstrap.bundle.js",
+        "js/bootstrap.bundle.js.map",
+        "js/bootstrap.bundle.min.js",
+        "js/bootstrap.bundle.min.js.map"
+      ]
+    }
+  ]
+}
+```
+
+## 3. Create a simple site with Razor pages
+
+Razor pages work similarly as Razor views with the only difference that they are standalone and do not require controllers.
+
+[Link to official documentation](https://docs.microsoft.com/en-us/aspnet/core/mvc/razor-pages/?view=aspnetcore-2.1&tabs=visual-studio)
+
+### 3.1 Routes
+
+Razor pages are placed in a `/Pages` folder and use folder structure to define their routes. For example:
+
+```txt
+- /Pages
+ | - _Layout.cshtml
+ | - _ViewImports.cshtml
+ | - Index.cshtml
+ | - Contact.cshtml
+ | - /Projects
+     | - Index.cshtml
+     | - MyProject.cshtml
+```
+
+This folder structure will yield the following route tree:
+
+```txt
+/
+/Contact
+/Projects
+/Projects/MyProject
+```
+
+### 3.2 Model
+
+To load data, 
+
+A Razor page can optionally define a model class which defines function to support the HTTP verbs.
